--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
   "name": "current-project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "mongoose": "^5.5.7"
+    "express": "^4.18.1",
+    "mongoose": "^5.13.14"
   },
   "devDependencies": {
-    "dotenv": "^8.0.0",
-    "nodemon": "^1.19.0"
-  }
+    "dotenv": "^8.6.0",
+    "nodemon": "^2.0.18"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/achatap/Your-First-Node-REST-API.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/achatap/Your-First-Node-REST-API/issues"
+  },
+  "homepage": "https://github.com/achatap/Your-First-Node-REST-API#readme",
+  "description": ""
 }
